Configure gradle test tasks